# RubiksCube3

./: .gitignore  CMakeLists.txt  DebugAll.props  Debug_GoogleBenchmark.props  README.md  ReleaseAll.props  Release_GoogleBenchmark.props  RubiksCube3.sln  config.txt
.github/workflows/: cmake-multi-platform.yml
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  core.h  corners.cpp  corners.h  cube.cpp  cube.h  edges.cpp  edges.h  math.cpp  math.h  random.h  std2.cpp  std2.h  tables.cpp  tables.h  twist.cpp  twist.h  twister.h  two_phase.cpp  two_phase.h
CoreBenchmark/: CoreBenchmark.vcxproj  main.cpp
CoreTest/: CMakeLists.txt  CoreTest.vcxproj  corners.cpp  cube.cpp  edges.cpp  math.cpp  pch.h  random.cpp  std2.cpp  tables.cpp  twist.cpp  twister.cpp
Solver/: CMakeLists.txt  Solver.vcxproj  main.cpp
